@@ -101,7 +101,7 @@ test io-1.8 {Tcl_WriteChars: WriteChars} {
     puts -nonewline $f [format %s%c [string repeat " " 4] 12399] 
     close           $f 
     contents test2
-} "\x1b(B    \x1b\$B\$O"
+} "    \x1b\$B\$O\x1b(B"
 
 test io-2.1 {WriteBytes} {
     # loop until all bytes are written
